force-app/main/default/objects/Enquiry_Deal_junction__c/Enquiry_Deal_junction__c.object-meta.xml
<CustomObject>
    <label>Enquiry Deal junction</label>
    <nameField>
        <displayFormat>Enquiry-Deal {0000000}</displayFormat>
        <label>Enquiries Deal Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiries Deal junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>