force-app/main/default/objects/Enquiry_Deal_junction__c/fields/Customer_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Enquiry__c</fullName>
    <label>Customer Enquiry</label>
    <referenceTo>Customer_Enquiry__c</referenceTo>
    <relationshipLabel>Enquiries Deal junction</relationshipLabel>
    <relationshipName>Enquiries_Deal_junction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>