force-app/main/default/objects/Enquiry_Deal_junction__c/fields/Deal_Notes_For_Customer__c.field-meta.xml
<CustomField>
    <fullName>Deal_Notes_For_Customer__c</fullName>
    <label>Deal Notes For Customer</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>