force-app/main/default/objects/Enquiry_Deal_junction__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>departures dates</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Enquiries Deal junction</relationshipLabel>
    <relationshipName>Enquiries_Deal_junction</relationshipName>
    <type>Lookup</type>
</CustomField>