force-app/main/default/objects/Enquiry_Deal_junction__c/recordTypes/Min_Number_Resolution.recordType-meta.xml
<RecordType>
    <fullName>Min_Number_Resolution</fullName>
    <active>true</active>
    <label>Min_Number_Resolution</label>
</RecordType>