force-app/main/default/objects/Enquiry_Deal_junction__c/recordTypes/Send_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Send_Enquiry</fullName>
    <active>true</active>
    <label>Send Enquiry</label>
</RecordType>